# ground-station

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml  pyproject.toml  template.env
.claude/: settings.json
.github/workflows/: frontend_test.yml  keycloak_start.yml  lint_frontend.yml  pre-commit.yml  pytest.yml  python_validation.yml
backend/: main.py
backend/api/: backend_setup.py  lifespan.py
backend/api/middleware/: cors_middleware.py  logger_middleware.py
backend/api/v1/aro/auth/: dependencies.py  oauth.py
backend/api/v1/aro/auth/google/: google.py
backend/api/v1/aro/auth/manual/: password.py  register.py
backend/api/v1/aro/auth/services/: callsign_2fa.py  tokens.py
backend/api/v1/aro/endpoints/: user.py
backend/api/v1/aro/models/: auth_requests.py  auth_responses.py  responses.py
backend/api/v1/mcc/endpoints/: auth.py  commands.py  status.py  users.py
backend/api/v1/mcc/models/: requests.py  responses.py
backend/config/: aro_auth_config.py  config.py  database_config.py  keycloak_config.py
backend/data/data_wrappers/: abstract_wrapper.py  wrappers.py
backend/data/database/: engine.py
backend/data/enums/: aro_auth_token.py  aro_requests.py  transactional.py
backend/data/resources/: cli_commands.py  commands_pipeline.py
backend/data/tables/: aro_user_tables.py  base_model.py  main_tables.py  mcc_user_tables.py  transactional_tables.py
backend/exceptions/: exception_handlers.py
backend/gs_cli/: ground_station_cli.py
backend/keycloak/: client.py
backend/mcc_keycloak/: client.py  mcc-realm.json
backend/migrations/: env.py
backend/migrations/versions/: 1440e2851238_update_for_commands_pipeline.py  277a508c37bb_make_user_id_nullable_in_commands.py  514ae47263fe_add_google_id_to_users_data.py  7a08f61ca7cc_add_user_id_fk_to_commands.py  986e5b72bde5_create_mccusers_table.py  c7f2a91b4d3e_match_dbdiagram_schema.py  eb50ffe96509_init.py  merge_001_merge_commands_pipeline_and_mcc_users.py
backend/obc_utils/: command_packaging.py  command_utils.py  encode_decode.py
backend/python_test/: conftest.py  pyproject.toml  test_abstract_wrapper.py  test_abstract_wrapper_update.py  test_custom_exceptions.py  test_mcc_authentication.py  test_mcc_command_endpoints.py  test_mcc_users_endpoints.py  test_retrieve_floating_commands.py
backend/python_test/test_command_pipeline/: test_commands_pipeline.py  test_commands_pipeline_integration.py
backend/python_test/test_interfaces/: test_aes128.py  test_ax25.py  test_command_pack_unpack.py  test_encode_decode_pipeline.py
backend/python_test/test_tables/: test_transactional.py
backend/resources/: special_characters.txt  utils.py
backend/sun/: ephemeris.py
frontend/aro/: package-lock.json  package.json  vite.config.ts
frontend/aro/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
frontend/aro/src/components/: Home.tsx  Nav.test.tsx  Nav.tsx  PageNotFound.tsx
frontend/aro/src/components/auth/: login.tsx  sign-up.tsx  verify.tsx
frontend/aro/src/components/new-request/: input-form.tsx  map-view.tsx  new-request-form.css  new-request-form.tsx
frontend/aro/src/components/profile/photo-gallery/: GallerySection.tsx  gallery.css  gallery.tsx  galleryData.ts
frontend/aro/src/components/profile/profile-form/: profile-form.css  profile-form.tsx
frontend/aro/src/components/ui/: button.tsx
frontend/aro/src/utils/: routes.ts  validate_coords.ts
frontend/mcc/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/mcc/src/: App.test.tsx  App.tsx  main.tsx
frontend/mcc/src/__tests__/: setup.ts
frontend/mcc/src/components/: Alert.tsx  Background.test.tsx  Nav.test.tsx  Nav.tsx  PageNotFound.tsx  SatelliteStatusIndicator.test.tsx  SatelliteStatusIndicator.tsx  Table.test.tsx  Table.tsx
frontend/mcc/src/components/ui/: button.tsx  field.tsx
frontend/mcc/src/contexts/: ThemeContext.tsx
frontend/mcc/src/lib/: utils.ts
frontend/mcc/src/pages/: LiveSession.tsx  Login.tsx  Telemetry.tsx
frontend/mcc/src/pages/Command/: Commands.tsx
frontend/mcc/src/pages/Command/components/: SelectCommand.tsx  SendCommand.tsx
frontend/mcc/src/utils/: mock-data.ts  telemetry-mock-data.json  types.ts
scripts/dev/: Dockerfile.backend  docker-compose.yml  kc-sync.sh
