[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "1.0.0"
description = "All backend code used by UW Orbital's GS subteam"
requires-python = ">=3.12"

dependencies = [
    "textual==6.2.0",
    "requests==2.31.0",
    "pyserial==3.5",
    "skyfield==1.48",
    "fastapi[standard]==0.115.0",
    "fastapi-cache2==0.2.1",
    "sqlmodel==0.0.22",
    "jinja2==3.1.6",
    "toml==0.10.2",
    "loguru==0.7.3",
    "pyham_ax25==1.0.2",
    "tinyaes==1.1.1",
    "pyStuffing==0.0.4",
    "hypothesis==6.131.30",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "tqdm==4.67",
    "uvicorn==0.22.0",
    "pydantic-settings==2.4.0",
    # Typed packages
    "types-requests==2.31.0",
    "types-pyserial==3.5.0",
    "types-setuptools==69.1.0.20240217",
    "types-toml==0.10.8",
    "types-tqdm==4.67.0.20250516",
    # Development/test dependencies
    "alembic==1.11.1",
    "pre-commit==3.3.3",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
    "ruff==0.2.0",
    "pytest-postgresql==7.0.1",
    "authlib>=1.6.9",
    "pyyaml>=6.0.3",
    "itsdangerous>=2.2.0",
    "pydantic-extra-types[phone-numbers]>=2.11.0",
    "phonenumbers>=9.0.26",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["python_test"]

[tool.mypy]
exclude = ["python_test/*"]
strict = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "skyfield.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ax25.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tinyaes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyStuffing.*"
ignore_missing_imports = true

[tool.ruff]
include = ["pyproject.toml", "backend/*.py"]
exclude = ["frontend/*", "python_test"]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-annotations
    "ANN",
    # flake8 builtin shadowing
    "A",
    # Documentation
    "D213", "D101", "D102", "D103", "D105"
]
ignore = ["ANN101", "ANN102"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
